--- a/angular.json
+++ b/angular.json
@@ -72,18 +72,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "thedezzin:build"
+            "browserTarget": "uxmarg:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "thedezzin:build:production"
+              "browserTarget": "uxmarg:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "thedezzin:build"
+            "browserTarget": "uxmarg:build"
           }
         },
         "test": {
@@ -120,16 +120,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "thedezzin:serve"
+            "devServerTarget": "uxmarg:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "thedezzin:serve:production"
+              "devServerTarget": "uxmarg:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "thedezzin"
+  "defaultProject": "uxmarg"
 }
